# cfdminer

./: CMakeLists.txt  main.cpp  readme.md
algorithms/: ccfdminer.cpp  ccfdminer.h  genmapentry.h  minernode.cpp  minernode.h
data/: database.cpp  database.h  dbtoken.cpp  dbtoken.h  itemsetdatabase.cpp  itemsetdatabase.h  tabulardatabase.cpp  tabulardatabase.h
util/: hashstorer.h  setutil.cpp  setutil.h
